--- a/src/components/detail/comments/simple-comment/simpleComment.ejs
+++ b/src/components/detail/comments/simple-comment/simpleComment.ejs
@@ -17,7 +17,7 @@
     <p class="detail-comment__content-text">Рыбатекст используется дизайнерами, проектировщиками и фронтендерами, когда
         нужно быстро заполнить макеты или прототипы содержимым. Это тестовый контент, который не должен нести никакого
         смысла, лишь показать наличие самого текста или продемонстрировать типографику в деле.</p>
-    <img style="display: none" class="detail-comment__content-image" src="static/Rectangle 99.png" alt="">
+    <img  class="detail-comment__content-image" src="static/Rectangle 99.png" alt="">
 </div>
 <div class="detail-comment__dashboard">
     <div class="detail-comment__dashboard-reply">
