--- a/src/components/card/mini-pull-card/miniPullCard.ejs
+++ b/src/components/card/mini-pull-card/miniPullCard.ejs
@@ -3,7 +3,7 @@
         <span class="mini-pull-card__sub-title">Опрос</span>
         <h2 class="mini-pull-card__title">Как называется сквер в Самаре?</h2>
     </div>
-    <form class="mini-pull-card__form">
+    <form style="display: none" class="mini-pull-card__form-options">
         <div class="mini-pull-card__content">
             Смольный собор строился как центральное сооружение Смольного монастыря. Не большое описание проекта.
         </div>
@@ -24,7 +24,7 @@
                         <input type="radio"
                                name="question"
                                class="question-answer_item-input">
-                        «Проект №<span class="question-answer_item-number">2</span>»
+                        «Проект №<span class="question-answer_item-number">1</span>»
                     </label>
                 </div>
             </li>
@@ -34,7 +34,7 @@
                         <input type="radio"
                                name="question"
                                class="question-answer_item-input">
-                        «Проект №<span class="question-answer_item-number">3</span>»
+                        «Проект №<span class="question-answer_item-number">1</span>»
                     </label>
                 </div>
             </li>
@@ -44,7 +44,7 @@
                         <input type="radio"
                                name="question"
                                class="question-answer_item-input">
-                        «Проект №<span class="question-answer_item-number">4</span>»
+                        «Проект №<span class="question-answer_item-number">1</span>»
                     </label>
                 </div>
             </li>
@@ -54,7 +54,7 @@
                         <input type="radio"
                                name="question"
                                class="question-answer_item-input">
-                        «Проект №<span class="question-answer_item-number">5</span>»
+                        «Проект №<span class="question-answer_item-number">1</span>»
                     </label>
                 </div>
             </li>
@@ -64,13 +64,81 @@
                         <input type="radio"
                                name="question"
                                class="question-answer_item-input">
-                        «Проект №<span class="question-answer_item-number">6</span>»
+                        «Проект №<span class="question-answer_item-number">1</span>»
                     </label>
                 </div>
             </li>
         </ul>
         <button class="question-btn" type="submit">Голосовать</button>
     </form>
+    <div  class="mini-pull-card__answer-container">
+        <ul class="mini-pull-card__answer-list">
+            <li class="mini-pull-card__answer-item">
+                <div class="mini-pull-card__answer-title">«Проект №1»</div>
+                <div class="mini-pull-card__progress">
+                    <div class="mini-pull-card__progress-bar" style="width: 12%"></div>
+                </div>
+                <div class="mini-pull-card__answer-item-pull">
+                    <span>Проголосовало 12</span>
+                    <span>12%</span>
+                </div>
+            </li>
+            <li class="mini-pull-card__answer-item">
+                <div class="mini-pull-card__answer-title">«Проект №2»</div>
+                <div class="mini-pull-card__progress">
+                    <div class="mini-pull-card__progress-bar" style="width: 60%"></div>
+                </div>
+                <div class="mini-pull-card__answer-item-pull">
+                    <span>Проголосовало 12</span>
+                    <span>12%</span>
+                </div>
+            </li>
+            <li class="mini-pull-card__answer-item">
+                <div class="mini-pull-card__answer-title">«Проект №3»</div>
+                <div class="mini-pull-card__progress">
+                    <div class="mini-pull-card__progress-bar" style="width: 10%"></div>
+                </div>
+                <div class="mini-pull-card__answer-item-pull">
+                    <span>Проголосовало 12</span>
+                    <span>12%</span>
+                </div>
+            </li>
+            <li class="mini-pull-card__answer-item">
+                <div class="mini-pull-card__answer-title">«Проект №4»</div>
+                <div class="mini-pull-card__progress">
+                    <div class="mini-pull-card__progress-bar" style="width: 18%"></div>
+                </div>
+                <div class="mini-pull-card__answer-item-pull">
+                    <span>Проголосовало 12</span>
+                    <span>12%</span>
+                </div>
+            </li>
+            <li class="mini-pull-card__answer-item">
+                <div class="mini-pull-card__answer-title">«Проект №5»</div>
+                <div class="mini-pull-card__progress">
+                    <div class="mini-pull-card__progress-bar" style="width: 18%"></div>
+                </div>
+                <div class="mini-pull-card__answer-item-pull">
+                    <span>Проголосовало 12</span>
+                    <span>12%</span>
+                </div>
+            </li>
+            <li class="mini-pull-card__answer-item">
+                <div class="mini-pull-card__answer-title">«Проект №6»</div>
+                <div class="mini-pull-card__progress">
+                    <div class="mini-pull-card__progress-bar" style="width: 18%"></div>
+                </div>
+                <div class="mini-pull-card__answer-item-pull">
+                    <span>Проголосовало 12</span>
+                    <span>12%</span>
+                </div>
+            </li>
+        </ul>
+        <div class="mini-pull-card__answer-count-pull">
+            <span>Всего голосов 100</span>
+            <span>100%</span>
+        </div>
+    </div>
     <div class="pull-footer-panel__footer-panel">
         <span class="pull-footer-panel__time-create">16.05.2020</span>
         <svg class="pull-footer-panel__item" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
