Added advertising banners

--- a/src/components/card/card-items/card-items.ejs
+++ b/src/components/card/card-items/card-items.ejs
@@ -8,6 +8,7 @@
         <%- include('../mini-card/mini-card'); -%>
         <%- include('../mini-card/mini-card'); -%>
         <%- include('../mini-card/mini-card'); -%>
+        <div style="width: 728px; height: 90px;background-color: #7AC1E4; margin: 0 auto;"></div>
         <%- include('../mini-card/mini-card'); -%>
         <%- include('../mini-card/mini-card'); -%>
         <%- include('../mini-card/mini-card'); -%>
