--- a/src/components/detail/detail.ejs
+++ b/src/components/detail/detail.ejs
@@ -51,6 +51,7 @@
     </p>
 </div>
 <%- include('detail-menu-links/menuLinks'); -%>
+<div style="width: 728px; height: 90px;background-color: #7AC1E4; margin: 0 auto;"></div>
 <div class="detail-content__container">
     <h2 class="content__title">
         Основные моменты
@@ -195,6 +196,7 @@
     <span class="detail-info__author-name">Имя Фамилия автора статьи</span>
 </div>
 <%- include('../content-block/listTags/listTags'); -%>
+
 <div class="detail-panel" data-dropdown-modal>
     <div class="detail-panel__inner">
         <div class="detail-panel__item">
@@ -226,6 +228,8 @@
         <%- include('../modal/modal-share-menu/modal-share-menu'); -%>
     </div>
 </div>
+
+<div style="width: 728px; height: 90px;background-color: #7AC1E4; margin: 0 auto;"></div>
 <%- include('comments/comments'); -%>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
