--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,6 +18,8 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
+
+<div style="width: 100%; height: 120px;background-color: #7AC1E4;"></div>
 <%- include('components/menu/header__nav/header__nav'); -%>
 <%- include('components/header/header'); -%>
 
