Made an adaptation for the mobile version

--- a/src/components/Poll/Poll.ejs
+++ b/src/components/Poll/Poll.ejs
@@ -19,23 +19,23 @@
             optionQuestion: "",
             list: [
                 {
-                    option: "Image Url",
+                    option: "static/Rectangle 611.png",
                     answer: "«Проект №1»"
                 },
                 {
-                    option: "Image Url",
+                    option: "static/Rectangle 611.png",
                     answer: "«Проект №2»"
                 },
                 {
-                    option: "Image Url",
+                    option: "static/Rectangle 611.png",
                     answer: "«Проект №3»"
                 },
                 {
-                    option: "Image Url",
+                    option: "static/Rectangle 611.png",
                     answer: "«Проект №4»"
                 },
                 {
-                    option: "Image Url",
+                    option: "static/Rectangle 611.png",
                     answer: "«Проект №5»"
                 }
             ]
