--- a/src/components/Poll/poll-Item/poll-Item.ejs
+++ b/src/components/Poll/poll-Item/poll-Item.ejs
@@ -21,7 +21,7 @@
                     </ul>
                 <% } else { %>
                     <div>
-                        <p>
+                        <p class="question-option__text">
                             <%= item.optionQuestion %>
                         </p>
                     </div>
