Adapted the page with the form for the author

--- a/src/components/about-author/about-author.ejs
+++ b/src/components/about-author/about-author.ejs
@@ -2,7 +2,7 @@
     <div class="about-author-content">
         <div class="about-author-content__container">
             <h1 class="content__title">
-                Как назвать сквер в Самаре?
+                Приглашаем к сотрудничеству
             </h1>
             <p class="content__text">
                 Страница с описанием проекта для сайта является таким же обязательным атрибутом, как логотип или контакты.
