refactored the code

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -34,6 +34,7 @@
 @import "../components/detail/comments/simple-comment/simpleComment";
 @import "../components/content-block/forms/add-new-detail-comment/addNewDetailComment";
 @import "../components/card/mini-pull-card/miniPullCard";
+@import "../components/content-block/Modal/Authorization/authorization";
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
