--- a/src/components/content-block/Modal/modal.ejs
+++ b/src/components/content-block/Modal/modal.ejs
@@ -4,13 +4,7 @@
     </svg>
 
     <p class="modal__title">
-        <% let linkImage = [
-            {image: "static/Rectangle 61.png"},
-            {image: "static/Rectangle 61.png"},
-            {image: "static/Rectangle 61.png"},
-            {image: "static/Rectangle 61.png"}
-        ] %>
-        <%- include('../slider/swiper', {linkImage}); -%>
+        <%- include('Authorization/authorization'); -%>
     </p>
 </div>
 
