--- a/src/components/card/mini-card/mini-card.scss
+++ b/src/components/card/mini-card/mini-card.scss
@@ -14,6 +14,7 @@
   box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   border-radius: 10px;
   max-width: 370px;
+  min-height: 525px;
 }
 
 .mini-article-card__item:hover {
@@ -22,6 +23,7 @@
 }
 
 .mini-article-card__content-container {
+  min-height: 277px;
   padding: 20px 25px 28px 25px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -110,7 +112,7 @@
 }
 
 .content-category__triplets:active {
-  background-color: #FFFFFF!important;
+  background-color: #FFFFFF !important;
 }
 
 // content
@@ -188,6 +190,15 @@
   margin-right: 10px;
 }
 
+.mini-article-card__pull-btn {
+  color: #FFFFFF;
+  background-color: #016BA0;
+  border-radius: 10px;
+  padding: 2px 20px;
+  font-size: 16px;
+  line-height: 36px;
+  margin-top: 17px;
+}
 
 @media (max-width: 770.98px) {
   .mini-article-card__item {
