--- a/src/components/card/mini-card/pull-card/miniPullCard.scss
+++ b/src/components/card/mini-card/pull-card/miniPullCard.scss
@@ -35,6 +35,7 @@
   overflow: hidden;
   margin-bottom: 15px;
 }
+
 .pull-card__form-question {
   height: 100%;
   display: flex;
@@ -90,6 +91,7 @@
   flex-wrap: wrap;
   margin-top: 17px;
 }
+
 .pull-card__item .pull-card__footer-panel {
   margin-top: 38px;
 }
@@ -113,10 +115,22 @@
 }
 
 .pull-card__footer-panel .footer-panel__action-item:not(:last-child) {
-  margin-right: 12px;
+  margin-right: 14px;
+}
+
+.footer-panel__action-item:not(.footer-panel__action-item.default):hover .footer-panel__action-counter,
+.footer-panel__action-item:not(.footer-panel__action-item.default):hover .footer-panel__action-icon path {
+  color: #003C5A;
+  fill: #003C5A;
+}
+
+.footer-panel__action-item:not(.footer-panel__action-item.default):active .footer-panel__action-icon path {
+  fill: #003C5A;
+  transform: scale(.9);
 }
 
 .pull-card__footer-panel .footer-panel__action-counter {
+  cursor: pointer;
   font-size: 12px;
   color: #777C86;
   margin-left: 5px;
