Rename pull in poll

--- a/src/components/card/mini-card/poll-card/miniPollCard.ejs
+++ b/src/components/card/mini-card/poll-card/miniPollCard.ejs
@@ -1,9 +1,9 @@
-<div class="pull-card__item" data-dropdown-modal>
-    <div class="pull-card__header">
-        <span class="pull-card__sub-title">Опрос</span>
-        <h2 class="pull-card__title">Как называется сквер в Самаре?</h2>
+<div class="poll-card__item" data-dropdown-modal>
+    <div class="poll-card__header">
+        <span class="poll-card__sub-title">Опрос</span>
+        <h2 class="poll-card__title">Как называется сквер в Самаре?</h2>
     </div>
-    <form class="pull-card__form-question">
+    <form class="poll-card__form-question">
         <div class="form-question__text">
             Смольный собор строился как центральное сооружение Смольного монастыря. Не большое описание проекта.
         </div>
@@ -13,13 +13,13 @@
                     <input type="radio"
                            name="question"
                            class="form-question__item-input">
-                    «Проект №<span class="pull-card-question_item-number">1</span>»
+                    «Проект №<span class="poll-card-question_item-number">1</span>»
                 </label>
             </li>
         </ul>
         <button class="btn" type="submit">Голосовать</button>
     </form>
-    <div class="pull-card__footer-panel">
+    <div class="poll-card__footer-panel">
         <span class="footer-panel__time-create">16.05.2020</span>
         <div class="footer-panel__action-list">
             <div class="footer-panel__action-item">
@@ -32,12 +32,12 @@
     </div>
 </div>
 
-<div class="pull-card__item" data-dropdown-modal>
-    <div class="pull-card__header">
-        <span class="pull-card__sub-title">Опрос</span>
-        <h2 class="pull-card__title">Как называется сквер в Самаре?</h2>
+<div class="poll-card__item" data-dropdown-modal>
+    <div class="poll-card__header">
+        <span class="poll-card__sub-title">Опрос</span>
+        <h2 class="poll-card__title">Как называется сквер в Самаре?</h2>
     </div>
-    <div class="pull-card__answer">
+    <div class="poll-card__answer">
         <ul class="answer__list">
             <li class="answer__item">
                 <div class="answer__title">«Проект №1»</div>
@@ -50,12 +50,12 @@
                 </div>
             </li>
         </ul>
-        <div class="pull-card__answer-all-count">
+        <div class="poll-card__answer-all-count">
             <span>Всего голосов 100</span>
             <span>100%</span>
         </div>
     </div>
-    <div class="pull-card__footer-panel" style="margin-top: 0">
+    <div class="poll-card__footer-panel" style="margin-top: 0">
         <span class="footer-panel__time-create">16.05.2020</span>
         <div class="footer-panel__action-list">
             <div class="footer-panel__action-item">
@@ -67,16 +67,16 @@
         <%- include('../../../modal/modal-share-menu/modal-share-menu'); -%>
     </div>
 </div>
-<div class="pull-preview-card__item" data-dropdown-modal>
-    <img class="pull-preview-card__item-image" src="static/Rectangle 56.png" alt="">
-    <div class="pull-preview-card__inner">
-        <div class="pull-preview-card__category-container">
+<div class="poll-preview-card__item" data-dropdown-modal>
+    <img class="poll-preview-card__item-image" src="static/Rectangle 56.png" alt="">
+    <div class="poll-preview-card__inner">
+        <div class="poll-preview-card__category-container">
             <div class="category__items">
                 <span class="category__item-link">Опрос</span>
             </div>
         </div>
-        <div class="pull-preview-card__content">
-            <h2 class="pull-card__title">
+        <div class="poll-preview-card__content">
+            <h2 class="poll-card__title">
                 Как назвать сквер в Самаре?
             </h2>
             <p class="content__text">
@@ -84,7 +84,7 @@
             </p>
             <button class="btn">Участвовать в опросе</button>
         </div>
-        <div class="pull-card__footer-panel">
+        <div class="poll-card__footer-panel">
             <span class="footer-panel__time-create">16.05.2020</span>
             <div class="footer-panel__action-list">
                 <div class="footer-panel__action-item default">
