--- a/src/components/card/mini-card/poll-card/miniPollCard.scss
+++ b/src/components/card/mini-card/poll-card/miniPollCard.scss
@@ -1,4 +1,4 @@
-.pull-card__item {
+.poll-card__item {
   min-height: 525px;
   max-height: 525px;
   display: flex;
@@ -12,16 +12,16 @@
   overflow: hidden;
 }
 
-.pull-card__header {
+.poll-card__header {
   margin-bottom: 15px;
 }
 
-.pull-card__title {
+.poll-card__title {
   font-size: 24px;
   line-height: 120%;
 }
 
-.pull-card__sub-title {
+.poll-card__sub-title {
   color: #777C86;
   font-size: 14px;
   margin-bottom: 5px;
@@ -30,20 +30,20 @@
 
 // Карточка с вопросами state 2
 
-.pull-card__answer .answer__list {
+.poll-card__answer .answer__list {
   max-height: 308px;
   overflow: hidden;
   margin-bottom: 15px;
 }
 
-.pull-card__form-question {
+.poll-card__form-question {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.pull-card__form-question .form-question__text {
+.poll-card__form-question .form-question__text {
   margin-bottom: 15px;
   overflow: hidden;
   display: -webkit-box;
@@ -51,21 +51,21 @@
   -webkit-box-orient: vertical;
 }
 
-.pull-card__form-question .form-question__list {
+.poll-card__form-question .form-question__list {
   margin-bottom: 20px;
   overflow: hidden;
   max-height: 182px;
 }
 
-.pull-card__form-question .form-question__item:not(:last-child) {
+.poll-card__form-question .form-question__item:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.pull-card__form-question .form-question__item {
+.poll-card__form-question .form-question__item {
   width: fit-content;
 }
 
-.pull-card__form-question .form-question__item-label {
+.poll-card__form-question .form-question__item-label {
   font-size: 14px;
   line-height: 22px;
   color: #333333;
@@ -74,7 +74,7 @@
   cursor: pointer;
 }
 
-.pull-card__form-question .form-question__item-input {
+.poll-card__form-question .form-question__item-input {
   width: 18px;
   height: 18px;
   margin-right: 10px;
@@ -83,7 +83,7 @@
 
 // Footer Panel
 
-.pull-card__footer-panel {
+.poll-card__footer-panel {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -92,29 +92,29 @@
   margin-top: 17px;
 }
 
-.pull-card__item .pull-card__footer-panel {
+.poll-card__item .poll-card__footer-panel {
   margin-top: 38px;
 }
 
-.pull-card__footer-panel .footer-panel__time-create {
+.poll-card__footer-panel .footer-panel__time-create {
   flex: 1;
   font-size: 12px;
   line-height: 14px;
   color: #777C86;
 }
 
-.pull-card__footer-panel .footer-panel__action-list {
+.poll-card__footer-panel .footer-panel__action-list {
   display: flex;
   justify-content: flex-end;
   flex: 1;
 }
 
-.pull-card__footer-panel .footer-panel__action-item {
+.poll-card__footer-panel .footer-panel__action-item {
   display: flex;
   align-items: center;
 }
 
-.pull-card__footer-panel .footer-panel__action-item:not(:last-child) {
+.poll-card__footer-panel .footer-panel__action-item:not(:last-child) {
   margin-right: 14px;
 }
 
@@ -129,7 +129,7 @@
   transform: scale(.9);
 }
 
-.pull-card__footer-panel .footer-panel__action-counter {
+.poll-card__footer-panel .footer-panel__action-counter {
   cursor: pointer;
   font-size: 12px;
   color: #777C86;
@@ -137,7 +137,7 @@
 }
 
 // Карточка с ответами state 3
-.pull-preview-card__item {
+.poll-preview-card__item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -149,29 +149,29 @@
   min-height: 525px;
 }
 
-.pull-preview-card__item:hover {
+.poll-preview-card__item:hover {
   box-shadow: 0 2px 10px rgba(93, 125, 142, 0.5);
 }
 
-.pull-card__answer {
+.poll-card__answer {
   height: 100%;
   flex-direction: column;
   display: flex;
   margin-bottom: 20px;
 }
 
-.pull-card__answer .answer__item:not(:last-child) {
+.poll-card__answer .answer__item:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.pull-card__answer .answer__title {
+.poll-card__answer .answer__title {
   margin-bottom: 3px;
   font-size: 11px;
   line-height: 160%;
   color: #333333;
 }
 
-.pull-card__answer .answer__progress-container {
+.poll-card__answer .answer__progress-container {
   display: flex;
   height: 5px;
   overflow: hidden;
@@ -179,7 +179,7 @@
   border-radius: 0 3px 3px 0;
 }
 
-.pull-card__answer .answer__progress-bar {
+.poll-card__answer .answer__progress-bar {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -189,7 +189,7 @@
   transition: width .6s ease;
 }
 
-.pull-card__answer .answer__item-count {
+.poll-card__answer .answer__item-count {
   margin-top: 3px;
   display: flex;
   justify-content: space-between;
@@ -199,7 +199,7 @@
   line-height: 160%;
 }
 
-.pull-card__answer .pull-card__answer-all-count {
+.poll-card__answer .poll-card__answer-all-count {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -208,7 +208,7 @@
   color: #777C86;
 }
 
-.pull-preview-card__inner {
+.poll-preview-card__inner {
   padding: 20px 25px 28px 25px;
   display: flex;
   flex-direction: column;
@@ -217,7 +217,7 @@
   min-height: 277px;
 }
 
-.pull-preview-card__content {
+.poll-preview-card__content {
   margin-top: 5px;
   height: 100%;
   display: flex;
@@ -225,7 +225,7 @@
   justify-content: space-around;
 }
 
-.pull-preview-card__content .content__text {
+.poll-preview-card__content .content__text {
   margin: 10px 0 15px;
   font-size: 14px;
   line-height: 160%;
@@ -236,18 +236,18 @@
 }
 
 // bread crumbs
-.pull-preview-card__category-container {
+.poll-preview-card__category-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.pull-preview-card__category-container .category__items {
+.poll-preview-card__category-container .category__items {
   height: 20px;
   overflow: hidden;
 }
 
-.pull-preview-card__category-container .category__item-link {
+.poll-preview-card__category-container .category__item-link {
   font-size: 14px;
   line-height: 16px;
   text-decoration-line: underline;
@@ -256,11 +256,11 @@
   cursor: pointer;
 }
 
-.pull-preview-card__category-container .category__item-link:not(:first-child) {
+.poll-preview-card__category-container .category__item-link:not(:first-child) {
   padding-left: 24px;
 }
 
-.pull-preview-card__category-container .category__item-link:not(:first-child):after {
+.poll-preview-card__category-container .category__item-link:not(:first-child):after {
   content: "";
   background: #C4C4C4;
   border-radius: 50%;
@@ -273,19 +273,19 @@
 }
 
 @media (max-width: 770.98px) {
-  .pull-preview-card__item {
+  .poll-preview-card__item {
     max-width: 330px;
   }
-  .pull-preview-card__item-image {
+  .poll-preview-card__item-image {
     width: 100%;
   }
 }
 
 @media (max-width: 400.98px) {
-  .pull-preview-card__item {
+  .poll-preview-card__item {
     max-width: 100%;
   }
-  .pull-preview-card__inner {
+  .poll-preview-card__inner {
     padding: 19px 20px 18px 20px;
   }
 }
