--- a/src/components/card/mini-card/poll-card/miniPollCard.ejs
+++ b/src/components/card/mini-card/poll-card/miniPollCard.ejs
@@ -9,11 +9,30 @@
         </div>
         <ul class="form-question__list">
             <li class="form-question__item">
-                <label class="form-question__item-label">
-                    <input type="radio"
-                           name="question"
-                           class="form-question__item-input">
-                    «Проект №<span class="poll-card-question_item-number">1</span>»
+                <input type="radio"
+                       name="question"
+                       id="question_1"
+                       class="form-question__item-input custom-radio">
+                <label for="question_1" class="form-question__item-label">
+                    «Проект №1»
+                </label>
+            </li>
+            <li class="form-question__item">
+                <input type="radio"
+                       name="question"
+                       id="question_2"
+                       class="form-question__item-input custom-radio">
+                <label for="question_2" class="form-question__item-label">
+                    «Проект №2»
+                </label>
+            </li>
+            <li class="form-question__item">
+                <input type="radio"
+                       name="question"
+                       id="question_3"
+                       class="form-question__item-input custom-radio">
+                <label for="question_3" class="form-question__item-label">
+                    «Проект №3»
                 </label>
             </li>
         </ul>
