--- a/src/components/dashboard/author-card/authorСard.ejs
+++ b/src/components/dashboard/author-card/authorСard.ejs
@@ -1,4 +1,4 @@
-<div class="author-card">
+<div style="display: none" class="author-card">
     <h1 class="author-card__title">Кабинет автора</h1>
     <div class="author-card__profile">
         <div class="author-card__logo-container">
@@ -32,3 +32,36 @@
         </div>
     </div>
 </div>
+<div class="author-card">
+    <h1 class="author-card__title">Кабинет автора</h1>
+    <div class="author-card__profile">
+        <div class="author-card__logo-container">
+            <div class="author-card__logo">
+                <img class="author-card__logo-img"
+                     src=""
+                     alt="">
+                <span class="author-card__logo__switch-btn">Сменить</span>
+            </div>
+        </div>
+        <div class="author-card edit">
+            <h3>Никнейм автора</h3>
+            <div class="edit-profile-form__group">
+                <div class="edit-profile-form__input-item">
+                    <input class="edit-profile-form__input" type="text" placeholder="Никнейм автора">
+                </div>
+                <div class="edit-profile-form__input-item">
+                    <input class="edit-profile-form__input" type="text" placeholder="Россия">
+                </div>
+                <div class="edit-profile-form__input-item">
+                    <input class="edit-profile-form__input" type="text" placeholder="Тольятти">
+                </div>
+                <div class="edit-profile-form__input-item">
+                    <input class="edit-profile-form__input" type="text" placeholder="avtor@mail.ru">
+                </div>
+            </div>
+
+            <button class="btn">Сохранить настройки</button>
+        </div>
+    </div>
+</div>
+
