--- a/src/components/dashboard/author-card/authorСard.scss
+++ b/src/components/dashboard/author-card/authorСard.scss
@@ -29,6 +29,7 @@
   background-color: #F2F7FA;
   padding: 30px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .author-card__profile-data {
@@ -55,4 +56,16 @@
 
 .author-card__list-btn a:not(:last-child) {
   margin-bottom: 10px;
+}
+
+@media (max-width: 546.98px) {
+  .author-card.edit {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 398.98px) {
+  .author-card:not(.author-card.edit) {
+    margin-top: 30px;
+  }
 }
