--- a/src/components/Poll/poll-Item/poll-Item.scss
+++ b/src/components/Poll/poll-Item/poll-Item.scss
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  gap: 27px;
 }
 
 .question-option_image {
@@ -54,10 +55,6 @@
   font-size: 16px;
 }
 
-.question-answer_item:not(:last-child) {
-  margin-bottom: 10px;
-}
-
 .question-answer_item {
   width: fit-content;
 }
@@ -70,22 +67,37 @@
   background-color: #003C5A;
 }
 
-@media (max-width: 576.98px) {
+@media (max-width: 800.98px) {
   .question-option_image {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 110px;
+    max-height: 110px;
   }
-  .question-option_item {
-    margin-bottom: 25px;
+  .question-option_list {
+    gap: 20px;
   }
+}
+
+@media (max-width: 576.98px) {
   .question-option_container {
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
   .question-option__text {
     margin-bottom: 20px;
   }
   .question-option_image {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 130px!important;
+    max-height: 130px!important;
+  }
+  .question-option_list {
+    gap: 30px!important;
+  }
+}
+@media (max-width: 380.98px) {
+  .question-option_image {
+    max-width: 100%!important;
+    max-height: 100%!important;
+  }
+  .question-option_list {
+    gap: 25px!important;
   }
 }
